# automatic-table-tennis

./: .gitignore  CMakeLists.txt  README.md  automatic-table-tennis.sln  automatic-table-tennis.vcxproj  main.cpp
automatic-table-tennis.xcodeproj/: project.pbxproj
automatic-table-tennis.xcodeproj/project.xcworkspace/xcuserdata/hyrorre.xcuserdatad/: UserInterfaceState.xcuserstate
automatic-table-tennis.xcodeproj/xcuserdata/hyrorre.xcuserdatad/xcschemes/: Copy of automatic-table-tennis.xcscheme  xcschememanagement.plist
